[gd_scene load_steps=46 format=2]

[ext_resource path="res://Assets/Campo4.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Gols.gd" type="Script" id=2]
[ext_resource path="res://Assets/Bola/1.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Bola.gd" type="Script" id=4]
[ext_resource path="res://Assets/Bola/4.png" type="Texture" id=5]
[ext_resource path="res://Scripts/Player1.gd" type="Script" id=6]
[ext_resource path="res://Scripts/Player2.gd" type="Script" id=7]
[ext_resource path="res://Assets/Player1 Run/1.png" type="Texture" id=8]
[ext_resource path="res://Assets/Player1 Run/3.png" type="Texture" id=9]
[ext_resource path="res://Assets/Player1 Run/10.png" type="Texture" id=10]
[ext_resource path="res://Assets/Player1 Run/8.png" type="Texture" id=11]
[ext_resource path="res://Assets/Player1 Run/7.png" type="Texture" id=12]
[ext_resource path="res://Assets/Player1 Run/9.png" type="Texture" id=13]
[ext_resource path="res://Assets/Player1 Run/5.png" type="Texture" id=14]
[ext_resource path="res://Assets/Player1 Run/4.png" type="Texture" id=15]
[ext_resource path="res://Assets/Player1 Run/6.png" type="Texture" id=16]
[ext_resource path="res://Assets/Player1 Run/2.png" type="Texture" id=17]
[ext_resource path="res://Assets/Player2 Run/6.png" type="Texture" id=18]
[ext_resource path="res://Assets/Player2 Run/4.png" type="Texture" id=19]
[ext_resource path="res://Assets/Player2 Run/8.png" type="Texture" id=20]
[ext_resource path="res://Assets/Player2 Run/9.png" type="Texture" id=21]
[ext_resource path="res://Assets/Player2 Run/1.png" type="Texture" id=22]
[ext_resource path="res://Assets/Player2 Run/7.png" type="Texture" id=23]
[ext_resource path="res://Assets/Player2 Run/2.png" type="Texture" id=24]
[ext_resource path="res://Assets/Player2 Run/3.png" type="Texture" id=25]
[ext_resource path="res://Assets/Player2 Run/5.png" type="Texture" id=26]
[ext_resource path="res://Assets/Player2 Run/10.png" type="Texture" id=27]
[ext_resource path="res://Assets/Bola/2.png" type="Texture" id=28]
[ext_resource path="res://Assets/Bola/3.png" type="Texture" id=29]
[ext_resource path="res://Scripts/pong.gd" type="Script" id=30]
[ext_resource path="res://Assets/Musicas/Champions.mp3" type="AudioStream" id=31]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 735.5, 21 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 784.5, 23 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 19.6409, 130.419 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 19.0639, 154.615 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 22.75, 129.81 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 18.8192, 155.344 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 18.0374, 105.865 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 18.9355, 106.435 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=7]
radius = 13.0384

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 17 ), ExtResource( 9 ), ExtResource( 15 ), ExtResource( 14 ), ExtResource( 16 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 13 ), ExtResource( 10 ) ],
"loop": true,
"name": "run",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 12, 49 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ ExtResource( 22 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 19 ), ExtResource( 26 ), ExtResource( 18 ), ExtResource( 23 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 27 ) ],
"loop": true,
"name": "run",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 12, 49 )

[node name="Pong" type="Node2D"]
script = ExtResource( 30 )

[node name="Campo" type="Node2D" parent="."]

[node name="campo" type="Sprite" parent="Campo"]
position = Vector2( 836, 438 )
texture = ExtResource( 1 )

[node name="Limites" type="Node2D" parent="."]

[node name="LimiteCima" type="StaticBody2D" parent="Limites"]

[node name="cima" type="CollisionShape2D" parent="Limites/LimiteCima"]
position = Vector2( 833.5, 104 )
shape = SubResource( 1 )

[node name="LimiteBaixo" type="StaticBody2D" parent="Limites"]

[node name="baixo" type="CollisionShape2D" parent="Limites/LimiteBaixo"]
position = Vector2( 833.5, 841 )
shape = SubResource( 2 )

[node name="Esquerda" type="StaticBody2D" parent="Limites"]

[node name="esquerdaCima" type="CollisionShape2D" parent="Limites/Esquerda"]
position = Vector2( 70.9441, 209.886 )
rotation = 0.0629751
shape = SubResource( 3 )

[node name="esquerdaBaixo" type="CollisionShape2D" parent="Limites/Esquerda"]
position = Vector2( 41.4781, 706.499 )
rotation = 0.0587842
shape = SubResource( 4 )

[node name="Direita" type="StaticBody2D" parent="Limites"]

[node name="direitaCima" type="CollisionShape2D" parent="Limites/Direita"]
position = Vector2( 1597, 211 )
rotation = -0.0630782
shape = SubResource( 5 )

[node name="direitaBaixo" type="CollisionShape2D" parent="Limites/Direita"]
position = Vector2( 1624.12, 709.133 )
rotation = -0.055771
shape = SubResource( 6 )

[node name="Gols" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="GolEsquerda" type="Area2D" parent="Gols"]
position = Vector2( 62, 407 )

[node name="esquerda" type="CollisionShape2D" parent="Gols/GolEsquerda"]
position = Vector2( -4.99706, 39.1162 )
rotation = 0.0646341
scale = Vector2( 1, 1 )
shape = SubResource( 12 )

[node name="GolDireita" type="Area2D" parent="Gols"]
position = Vector2( 1600, 448 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gols/GolDireita"]
position = Vector2( 8.94653, -0.782257 )
rotation = -0.0518684
shape = SubResource( 13 )

[node name="Bola" type="KinematicBody2D" parent="."]
position = Vector2( 834, 459 )
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Bola"]
scale = Vector2( 0.270833, 0.270833 )
frames = SubResource( 14 )
frame = 3
playing = true

[node name="CollisionBola" type="CollisionShape2D" parent="Bola"]
shape = SubResource( 7 )

[node name="Player1" type="KinematicBody2D" parent="."]
position = Vector2( 114, 458 )
script = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Player1"]
scale = Vector2( 1.13433, 1.13433 )
frames = SubResource( 10 )
animation = "run"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player1"]
position = Vector2( -3, 0 )
shape = SubResource( 8 )

[node name="Player2" type="KinematicBody2D" parent="."]
position = Vector2( 1544, 448 )
script = ExtResource( 7 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Player2"]
position = Vector2( 1.00001, -3.49999 )
scale = Vector2( 1.07407, 1.12121 )
frames = SubResource( 11 )
animation = "run"
frame = 4
playing = true
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player2"]
position = Vector2( 3, 1 )
shape = SubResource( 9 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 31 )

[connection signal="body_entered" from="Gols/GolEsquerda" to="Gols" method="_on_body_entered"]
[connection signal="body_entered" from="Gols/GolDireita" to="Gols" method="_on_body_entered"]
